--- a/tests/NetFlux.Tests/NetFlux.Tests.csproj
+++ b/tests/NetFlux.Tests/NetFlux.Tests.csproj
@@ -1,10 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <RootNamespace>OIre.NetFlux.Tests</RootNamespace>
-    <TargetFramework>net8.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
   </PropertyGroup>
@@ -27,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\NetFlux\NetFlux.csproj" />
+    <ProjectReference Include="../../src/NetFlux/NetFlux.csproj" />
   </ItemGroup>
 
 </Project>
