Add .NET analyzers

--- a/.editorconfig
+++ b/.editorconfig
@@ -4,6 +4,7 @@ indent_style = space
 indent_size = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
+max_line_length = 120
 
 [*.md]
 trim_trailing_whitespace = false
@@ -33,3 +34,8 @@ csharp_indent_switch_labels = true
 csharp_space_before_colon_in_inheritance_clause = false
 csharp_space_after_colon_in_inheritance_clause = true
 csharp_preserve_single_line_statements = false
+
+# .NET code analysis
+dotnet_analyzer_diagnostic.category-security.severity = error
+dotnet_analyzer_diagnostic.category-performance.severity = warning
+dotnet_analyzer_diagnostic.category-reliability.severity = warning
